# nlp_solvers

./: README.md
roboptim-core/: CMakeLists.txt  package.xml
roboptim-core-plugin-ipopt/: CMakeLists.txt  package.xml
roboptim-core/env-hooks/: 99.roboptim-core.bash
roboptim_tutorials/: CMakeLists.txt  package.xml
roboptim_tutorials/src/: ipopt_tutorial.cpp
