<?xml version="1.0"?>
<package format="2">
  <name>roboptim_tutorials</name>
  <version>0.0.0</version>
  <description>The roboptim_tutorials package</description>

  <maintainer email="hiraoka@tjsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roboptim-core</depend>
  <depend>roboptim-core-plugin-ipopt</depend>

</package>
